--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <h2>Request a Tutorial</h2>
         <form>
           <input type="text" name="request" placeholder="Request...">
-          <button>Submit Request</button>
+          <button type="submit">Submit Request</button>
           <p class="error"></p>
         </form>
       </div>
@@ -53,19 +53,21 @@
       </nav>
     </header>
 
-     <section class="content">
+     <section class="content" id="app">
       <h1>Tutorial Requests</h1>
       <ul class="request-list"> 
-        <li>
-          <span class="text">Laravel 6 tutorial</span>
+        <li v-for="request in requests">
+          <span class="text">{{ request.text }}</span>
           <div>
-            <span class="votes">125</span>
+            <span class="votes">{{ request.upvotes }}</span>
             <i class="material-icons upvote">arrow_upward</i>
           </div>
         </li>
       </ul>
-      <button class="call">Say hello</button>
     </section>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
       <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/7.20.0/firebase-app.js"></script>
@@ -82,5 +84,6 @@
 
     <script src="js/app.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/requests.js"></script>
   </body>
 </html>
